--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Meu Portfólio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!--navbar-->
-    <header id="navbar"> 
+    <header id="navbar">
         <img src="./img/shuriken.png" alt="Estrela Ninja">
         <h2>Patricia Gubert</h2>
-        <nav> 
+        <nav>
             <ul id="navbar-list">
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Projetos</a></li>
@@ -22,7 +24,7 @@
     </header>
     <!--fim navbar-->
     <!--banner início-->
-    <main> 
+    <main>
         <div id="main-banner">
             <div id="banner-info">
                 <h1>Olá, sou Patricia Gubert.<br> Seja bem-vindo(a) ao meu Portfólio.</h1>
@@ -30,14 +32,17 @@
                 <p>A ninja da programação</p>
             </div>
         </div>
-         <!--banner fim-->
-         <!--about início-->
-         <section id="about-section">
-             <h2>Sobre o meu jeito ninja de ser</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. In culpa qui officia deserunt mollit anim id est laborum.</p>
+        <!--banner fim-->
+        <!--about início-->
+        <section id="about-section">
+            <h2>Sobre o meu jeito ninja de ser</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. In culpa
+                qui officia deserunt mollit anim id est laborum.</p>
 
-         </section>
-         <!--about fim-->
+        </section>
+        <!--about fim-->
     </main>
     <!--skills início-->
     <section id="skills-section">
@@ -52,58 +57,56 @@
                 <p>E-commerces, Sites Institucionais, Sistemas de qualquer complexidade</p>
             </div>
             <div class="skills-container central">
-            <img src="./img/weapon2.png" alt="weapons">
+                <img src="./img/weapon2.png" alt="weapons">
                 <h3>Criação</h3>
                 <p>Atuo também na análise e gerenciamento de projetos</p>
                 <p class="subtitle">Meus conhecimentos:</p>
                 <p>Análise de Software, Engenharia de Requisitos, Análise de Infra</p>
             </div>
             <div class="skills-container">
-            <img src="./img/weapon3.png" alt="weapons">
+                <img src="./img/weapon3.png" alt="weapons">
                 <h3>Infraestrutura</h3>
                 <p>Posso mensurar seus servidores, deixando o projeto mais performático</p>
                 <p class="subtitle">Serviços de Cloud:</p>
                 <p>AWS, Google Cloud, Microsoft Azure</p>
                 <p class="subtitle">O que posso fazer:</p>
-                <p>Clusters, Servidores de CDN, diminuir o tempo de requisição   </p>
+                <p>Clusters, Servidores de CDN, diminuir o tempo de requisição </p>
             </div>
         </div>
 
     </section>
     <!--skills fim-->
     <!--jobs início-->
-    <section id="jobs-section"> 
-    <h2>Veja meus últimos trabalhos:</h2>
-<<<<<<< HEAD
-    <p>Aqui estão os meus trabalhos mais recentes. <br> Para ver todos <a href="#">Clique aqui.</a></p>
-=======
-    <p>Aqui estão os meus trabalhos mais recentes, para ver todos <a href="#">Clique aqui.</a></p>
->>>>>>> a334b8b690475bfe42086c0f5b4454c688c9de0f
-    <div class="job-container">
-        <div class="job-box proj1"></div>
-        <div class="job-box proj2"></div>
-        <div class="job-box proj3"></div>
-    </div>
-    <div class="job-container">
-        <div class="job-box proj2"></div>
-        <div class="job-box proj3"></div>
-        <div class="job-box proj1"></div>
-    </div>
-    <!--jobs fim-->
-    <!--footer início-->
-    <footer>
-        <h2>Me mande uma mensagem</h2>
-        <p>Caso queira falar sobre algum projeto, me contratar ou falar sobre ninjas...</p>
-        <img src="./img/ninja.png" alt="Perfil Ninja>
+    <section id="jobs-section">
+        <h2>Veja meus últimos trabalhos:</h2>
+        <p>Aqui estão os meus trabalhos mais recentes. <br> Para ver todos <a href="#">Clique aqui.</a></p>
+        <p>Aqui estão os meus trabalhos mais recentes, para ver todos <a href="#">Clique aqui.</a></p>
+        <div class="job-container">
+            <div class="job-box proj1"></div>
+            <div class="job-box proj2"></div>
+            <div class="job-box proj3"></div>
+        </div>
+        <div class="job-container">
+            <div class="job-box proj2"></div>
+            <div class="job-box proj3"></div>
+            <div class="job-box proj1"></div>
+        </div>
+        <!--jobs fim-->
+        <!--footer início-->
+        <footer>
+            <h2>Me mande uma mensagem</h2>
+            <p>Caso queira falar sobre algum projeto, me contratar ou falar sobre ninjas...</p>
+            <img src="./img/ninja.png" alt="Perfil Ninja>
         <form action="" method="">
-            <input type="text" name="name" placeholder="Seu nome">
+            <input type=" text" name="name" placeholder="Seu nome">
             <input type="email" name="email" placeholder="Seu e-mail">
-            <textarea name="msg" placeholder="Digite uma mensagem"></textarea> 
+            <textarea name="msg" placeholder="Digite uma mensagem"></textarea>
             <input type="submit" value="Enviar">
-        </form>
-        <p>Desenvolvido por <span class="detail">Patricia Gubert </span></p>   
-    </footer>
-    <!--footer fim-->
-    
+            </form>
+            <p>Desenvolvido por <span class="detail">Patricia Gubert </span></p>
+        </footer>
+        <!--footer fim-->
+
 </body>
+
 </html>
